# Agent-sandbox-platform

./: .gitignore  README.md  pyrefly.toml
agent-client/: README.md  pyproject.toml
agent-client/examples/: agent.yaml
agent-client/src/agent_client/: api.py  cli.py  config.py  history.py  platform.py
agent-runtime/: Dockerfile  requirements-test.txt  requirements.txt
agent-runtime/scripts/: gen_proto.sh
agent-runtime/src/: config.py  main.py  registry.py  service.py
agent-runtime/src/core/: agent.py  base.py  llm.py  memory.py
agent-runtime/src/pb/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py
agent-runtime/src/tools/: __init__.py  bash_tool.py  compose_tool.py  file_tool.py  platform_tool.py
platform/: Dockerfile  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  prometheus.yml
platform/cmd/server/: main.go
platform/internal/agentproto/: agent.pb.go  agent.proto  agent_grpc.pb.go
platform/internal/api/: errors.go  handler_chat.go  handler_session.go  middleware.go  router.go  types.go
platform/internal/config/: config.go
platform/internal/dispatcher/: dispatcher.go  interface.go  types.go
platform/internal/eventbus/: bus.go  interface.go  types.go
platform/internal/monitor/: monitor.go  server.go
platform/internal/orchestrator/: interface.go  pool.go  pool_test.go  strategy.go  types.go
platform/internal/sandbox/: container.go  container_test.go  errors.go  interface.go  types.go
platform/internal/server/: dependency.go  server.go
platform/internal/service/: companion.go  compose.go  (+2 more)
test/: run_agent.py  start.sh
(+13 files in other folders)
